--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>GamerSpot</title>
   </head>
   <body style="background-color: silver;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
