added app bar and programmed links on sign-in pages

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>GamerSpot</title>
   </head>
-  <body style="background-color: silver;">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
